--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card{
+  background: #fff;
+  padding:20px;
+  box-sizing:border-box;
+  box-shadow: 0 0 10px #eee;
+  border: 1px solid #cecece;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card-faq{
+  padding: 7% 15%;
+}
+#carousels{
+     background-color: rgb(236, 246, 248);
+     width: 80%;
+     margin-left: 10%;
+     
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.car-img{
+  /* width: 1000px;
+  height: 700px; */
+  width: 60%;
+  height: 20%;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+#graph{
+  background-color: rgb(236, 246, 248);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.img-first{
+  width:100%;
+  
 }
+
+.img-head{
+    width:30%;
+}
+#start{
+  margin-bottom: 30px;
+}
+
+.public-symptoms{
+  width:100%;
+  background-color: rgb(236, 246, 248);
+}
+.col-s1{
+  padding-top: 5%;
+}
+.col-s2{
+  width:50%;
+}
+.fir-ul{
+  text-align: center  ;
+  width:50%;
+}
+
+li{
+  text-align: left;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+}
+
